--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.4"
+    "react-calendar": "^5.0.0",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -21,6 +22,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "eslint-config-next": "14.2.4",
+    "prettier": "^3.2.2",
+    "prettier-plugin-tailwindcss": "^0.5.11"
   }
 }
