--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,9 @@
       "@icon/*": [
         "./public/icon/*"
       ],
+      "@image/*": [
+        "./public/image/*"
+      ],
     }
   },
   "include": [
