--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "14.2.4",
     "react": "^18",
     "react-calendar": "^5.0.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.4.0",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "typescript": "^5",
