--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^10.12.4",
+    "moment": "^2.30.1",
     "next": "14.2.4",
     "react": "^18",
     "react-calendar": "^5.0.0",
@@ -30,3 +31,4 @@
     "prettier-plugin-tailwindcss": "^0.5.11"
   }
 }
+
