--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^3.6.0",
     "firebase": "^10.12.4",
     "moment": "^2.30.1",
     "next": "14.2.4",
     "react": "^18",
     "react-calendar": "^5.0.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0",
     "zustand": "^4.5.4"
@@ -31,4 +33,3 @@
     "prettier-plugin-tailwindcss": "^0.5.11"
   }
 }
-
