--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-calendar": "^5.0.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.4.0",
     "zustand": "^4.5.4"
   },
