--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
 NEXT_PUBLIC_FIREBASE_APP_ID=
 NEXT_PUBLIC_FIREBASE_MEASURMENT_ID=
 NEXT_PUBLIC_DATABASE_URL=
+
+#kakao
+NEXT_PUBLIC_KAKAO_API_KEY=
