edit: 프로젝트 스타일 및 설정 수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,12 @@
       "@image/*": [
         "./public/image/*"
       ],
+      "@stores/*": [
+        "./src/stores/*"
+      ],
+      "@libs/*": [
+        "./src/libs/*"
+      ],
     }
   },
   "include": [
