--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "date-fns": "^3.6.0",
     "firebase": "^10.12.4",
     "moment": "^2.30.1",
