--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.12.4",
     "moment": "^2.30.1",
     "next": "14.2.4",
+    "next-pwa": "^5.6.0",
     "react": "^18",
     "react-calendar": "^5.0.0",
     "react-datepicker": "^7.3.0",
