--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.2.4",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "firebase": "^10.12.4",
+    "lucide-react": "^0.509.0",
     "moment": "^2.30.1",
     "next": "14.2.4",
     "next-pwa": "^5.6.0",
@@ -20,7 +24,8 @@
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "swr": "^2.2.5",
-    "tailwind-merge": "^2.4.0",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
