--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.10",
+    "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-slot": "^1.2.2",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^3.6.0",
+    "date-fns": "^4.1.0",
     "firebase": "^10.12.4",
     "lucide-react": "^0.509.0",
     "moment": "^2.30.1",
@@ -22,6 +25,7 @@
     "react": "^18",
     "react-calendar": "^5.0.0",
     "react-datepicker": "^7.3.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "swr": "^2.2.5",
     "tailwind-merge": "^3.3.0",
